# TM-Project

./: .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Dockerfile.backend  Dockerfile.frontend  LGTM_GUIDE.md  LICENSE  NUXT_MIGRATION.md  README.md  README_LGTM.md  SECURITY_SUMMARY.md  SETUP_GUIDE.txt  database_entity_relationship.txt  docker-compose.yml  package-lock.json  package.json  test-gridfs.js  vite.config.js
.github/workflows/: codeql.yml  main.yml  tauri.yml  vercel-push.yml  vercel.yml
client/: .env.example  .vercelignore  app.vue  index.html  index.html.old  nuxt.config.js  nuxt.config.ts  package-lock.json  package.json  vercel.json  vite.config.js  vite.config.js.old  vitest.config.js
client/.nuxt/: components.d.ts  imports.d.ts  nitro.json  nuxt.d.ts  nuxt.json  nuxt.node.d.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.server.json  tsconfig.shared.json
client/.output/: nitro.json
client/app/: App.vue
client/components/: AnnouncementView.vue  CacheDebugger.vue  DeleteAnnouncements.vue  DeleteMembers.vue  DeleteTeams.vue  GlobalNotifications.vue  NewAnnouncements.vue  NewMembers.vue  NewTasks.vue  NewTeams.vue  NotificationCenter.vue  RoleManagement.vue  RoleManagementTabs.vue  TaskSubmission.vue  UpdateAnnouncements.vue  UpdateTaskGroups.vue  ViewTask.vue
client/layouts/: default.vue
client/middleware/: admin.js  auth.global.ts  auth.js
client/pages/: admin.vue  error.vue  feedback.vue  forgot-password.vue  home.vue  index.vue  login.vue  register.vue  reset-password.vue  terms-of-service.vue  verify-email.vue
client/plugins/: google-login.ts  vuetify.ts
client/public/: lastest.json  latest.json  loading.html
client/services/: permissionService.js  sessionService.js  updateService.js
client/src-tauri/: .gitignore  Cargo.toml  myapp.key.pub  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs
docs/: incident-response.md
server/: .env.example  app.js  instrumentation.js  package-lock.json  package.json  vitest.config.js
src/: App.vue  main.js
(+376 files in other folders)
