[package]
name = "teams-management"
version = "0.1.0"
description = "A modern web application for collaborative team and task management"
authors = ["Toan", "Khanh", "Hieu"]
license = "MIT"
repository = "https://github.com/caphefalumi/TM-Project"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2.5.0"
tauri-plugin-shell = "2"
